--- a/index.html
+++ b/index.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Saad Alddine">
-    <link rel="shortcut icon" href="assets/img/clock-regular.svg" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap">
-    <link rel="stylesheet" href="./assets/style/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./assets/script/app.js" defer type="module"></script>
-    <title>Shape Factory</title>
-  </head>
-  <body>
-    <div class="controls">
-        <label for="shape-select">Select Shape:</label>
-        <select id="shape-select">
-            <option value="circle">Circle</option>
-            <option value="square">Square</option>
-        </select>
-
-        <label for="color-select">Select Color:</label>
-        <select id="color-select">
-            <option value="#09f">Blue</option>
-            <option value="#9f0">Green</option>
-            <option value="#f90">Orange</option>
-            <option value="#f09">Pink</option>
-            <option value="#90f">Purple</option>
-        </select>
-
-        <button onclick="createShape()">Create</button>
-    </div>
-
-    <div class="grid" id="shape-container">
-        <!-- Shapes will be added dynamically here -->
-    </div>
-</body>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="">
+        <meta name ="description" content="Saad">
+        <meta name="keywords" content="web developer, web, developer, front-end, html, css, javascript, react, sql">
+        <title>Shape Factory</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./assets/style/style.css">
+        <script src="./assets/script/app.js" type="module"></script>
+    </head>
+    <body>
+        <main>
+            <div class="container shape-factory">
+                <div class="factory">
+                    <h1>Shape factory</h1>
+                    <form>
+                        <select class="shape">
+                            <option value="" selected="" disabled="" hidden="">
+                                Shape
+                            </option>
+                            <option value="square">Square</option>
+                            <option value="circle">Circle</option>
+                        </select>
+                        <select class="color">
+                            <option value="" selected="" disabled="" hidden="">
+                                Color
+                            </option>
+                            <option value="09f">Blue</option>
+                            <option value="9f0">Green</option>
+                            <option value="f90">Orange</option>
+                            <option value="f09">Pink</option>
+                            <option value="90f">Purple</option>
+                        </select>
+                        <input type="button" value="Create" class="create">
+                    </form>
+                    <div class="grid-container"></div>
+                    <p class="factory-info">Select a shape and color to start</p>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
